--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "express": "^4.15.4",
     "install": "^0.10.1",
     "microsoft-speech-browser-sdk": "0.0.4",
+    "mikanjs": "^1.0.10",
     "moment": "^2.18.1",
     "npm": "^5.3.0",
     "striptags": "^3.0.1",
-    "ws": "^3.1.0"
+    "ws": "^3.1.0",
+    "yml": "^1.0.0"
   }
 }
