--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   "dependencies": {
     "cheerio-httpcli": "^0.7.0",
     "child-process-promise": "^2.2.1",
+    "dotenv": "^4.0.0",
     "ect": "^0.5.9",
     "express": "^4.15.4",
     "install": "^0.10.1",
+    "kuromoji": "^0.1.1",
     "microsoft-speech-browser-sdk": "0.0.4",
-    "mikanjs": "^1.0.10",
     "moment": "^2.18.1",
+    "mysql": "^2.14.1",
     "npm": "^5.3.0",
     "striptags": "^3.0.1",
+    "tempy": "^0.1.0",
     "ws": "^3.1.0",
     "yml": "^1.0.0"
   }
